tests/fixtures/invalid/dict_lt_none.py
# Cannot compare with < Dict[str, int] and None
x: bool = {"a": 1} < None
